--- a/quanlykho/src/QLK/Login/Home.form
+++ b/quanlykho/src/QLK/Login/Home.form
@@ -526,7 +526,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="            Qua&#x309;n ly&#x301; nh&#x1ead;p kho"/>
+                    <Property name="text" type="java.lang.String" value="            Qua&#x309;n ly&#x301; nh&#x1ead;p"/>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[150, 28]"/>
                     </Property>
