--- a/quanlykho/src/QLK/Login/Home.form
+++ b/quanlykho/src/QLK/Login/Home.form
@@ -54,15 +54,21 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jPanel11" alignment="1" min="-2" max="-2" attributes="0"/>
-              <Component id="jPanel4" alignment="1" min="-2" max="-2" attributes="0"/>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <Component id="jPanel11" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="jPanel11" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
@@ -118,7 +124,7 @@
                           <Component id="lblTenNV" alignment="0" pref="26" max="32767" attributes="0"/>
                           <Component id="lblCV" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -183,7 +189,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jPanel5" alignment="0" max="32767" attributes="0"/>
-                  <Component id="btnQL" alignment="0" pref="322" max="32767" attributes="0"/>
+                  <Component id="btnQL" alignment="0" max="32767" attributes="0"/>
                   <Component id="pnQL" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnTT" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnExit" alignment="1" max="32767" attributes="0"/>
@@ -251,7 +257,7 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnQLTK" alignment="0" pref="322" max="32767" attributes="0"/>
+                          <Component id="btnQLTK" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnDangXuat" alignment="1" max="32767" attributes="0"/>
                           <Component id="btnQLNV" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -415,7 +421,7 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnQLXK" alignment="0" pref="322" max="32767" attributes="0"/>
+                      <Component id="btnQLXK" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnSanPham" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnNK" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnK" alignment="0" max="32767" attributes="0"/>
@@ -691,22 +697,22 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnTKX" alignment="0" pref="322" max="32767" attributes="0"/>
-                      <Component id="btnQLSP" alignment="0" max="32767" attributes="0"/>
+                      <Component id="btnTKN" alignment="0" max="32767" attributes="0"/>
+                      <Component id="btnTKX" alignment="0" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="btnTKX" min="-2" pref="42" max="-2" attributes="0"/>
+                          <Component id="btnTKN" min="-2" pref="42" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="btnQLSP" min="-2" pref="42" max="-2" attributes="0"/>
+                          <Component id="btnTKX" min="-2" pref="42" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="btnTKX">
+                <Component class="javax.swing.JLabel" name="btnTKN">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -729,10 +735,10 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnTKXMouseClicked"/>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnTKNMouseClicked"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JLabel" name="btnQLSP">
+                <Component class="javax.swing.JLabel" name="btnTKX">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -755,7 +761,7 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnQLSPMouseClicked"/>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnTKXMouseClicked"/>
                   </Events>
                 </Component>
               </SubComponents>
@@ -779,7 +785,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="993" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
